refactor js and css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      <link href="bootstrap.css" rel="stylesheet">
 <link href="bootstrap-switch.css" rel="stylesheet"> -->
 
-  <link href="css/styles.css">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -76,8 +76,8 @@
 
   <!-- ui construction year date, and layer toggle -->
   <div id='year' class="text-light">
-    <!-- <label><img src="graphics/dashed-line.png" width="20px" height="20px"> UK Property</br>-->
-    <!--<p2>Even though the University of Kentucky (UK) was established in 1865, campus as it is known 
+    <!-- <label><img src="graphics/dashed-line.png" width="20px" height="20px"> UK Property</br>
+        <p2>Even though the University of Kentucky (UK) was established in 1865, campus as it is known 
         today was not acquired until 1880 when Fayette County gave the former fairground property to the 
         University as a formal campus. Use this map to explore the history and growth of UK's main campus. </p2>-->
     <div id="switch" class="font-weight-bold">
@@ -109,6 +109,7 @@
     </div>
     <h3>*Points of Interest are not filtered by the date slider</h3>
   </div>
+
 
 
   <!-- jQuery first and the minified version from jQuery site, not the slim minified version from Bootstrap's site. -->
