wire first switch JS

--- a/index.html
+++ b/index.html
@@ -85,16 +85,15 @@
       <!--https://github.com/djibe/bootstrap-switch
             https://www.cdnpkg.com/bootstrap-switch-->
       <div class="custom-control custom-switch">
-        <input type="checkbox" class="custom-control-input" data-toggle="toggle" id="customSwitch1" data-size="mini"
-          checked>
+        <input type="checkbox" id="customSwitch1" data-toggle="toggle" checked>
         <label class="custom-control-label" for="customSwitch1">Points of Interest*</label>
       </div>
       <div class="custom-control custom-switch">
-        <input type="checkbox" class="custom-control-input" id="customSwitch2" checked>
+        <input type="checkbox" id="customSwitch2" data-toggle="toggle" checked>
         <label class="custom-control-label" for="customSwitch2">Parcels</label>
       </div>
       <div class="custom-control custom-switch">
-        <input type="checkbox" class="custom-control-input" id="customSwitch3" checked>
+        <input type="checkbox" id="customSwitch3" data-toggle="toggle" checked>
         <label class="custom-control-label" for="customSwitch3">Buildings</label>
       </div>
       </br>
