modal caption formatted

--- a/index.html
+++ b/index.html
@@ -59,20 +59,21 @@
     <!-- The Modal -->
     <div id="myModal" class="modal">
       <div class="modal-content">
-        <di v class="modal-header">
+        <!--<div class="modal-header">
           <h1 class="modal-title" id="modalLabel">Confirm</h1>
-      </div>
-      <div class="modal-body">
-        <div class="text-center">
+      </div>-->
+        <div class="modal-body">
+          <div class="text-center">
           <!-- id="slider-example"-->
-          <div id="image-compare"></div>
-        </div>
-        <p>confirm</p>
+            <div id="image-compare"></div>
+          </div>
+          <p>confirm</p>
       </div>
     </div>
     <span class="close" data-dismiss="modal">&times;</span>
     <div id="caption"></div>
   </div>
+  
 
   <!-- ui construction year date, and layer toggle -->
   <div id='year' class="text-light">
