toggles functioning with on/off switch

--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
       <!--<div class="form-check">-->
       <!--https://github.com/djibe/bootstrap-switch
             https://www.cdnpkg.com/bootstrap-switch-->
-      <div class="custom-control custom-switch">
-        <input type="checkbox" id="customSwitch1" data-toggle="toggle" checked>
-        <label class="custom-control-label" for="customSwitch1">Points of Interest*</label>
+      <div class="form-check pl-0">
+        <input type="checkbox" id="customSwitch1" data-toggle="toggle" class="form-check-input" data-size="xs" checked>
+        <label class="form-check-label" for="customSwitch1">Points of Interest*</label>
       </div>
-      <div class="custom-control custom-switch">
-        <input type="checkbox" id="customSwitch2" data-toggle="toggle" checked>
-        <label class="custom-control-label" for="customSwitch2">Parcels</label>
+      <div class="form-check pl-0">
+        <input type="checkbox" id="customSwitch2" data-toggle="toggle" class="form-check-input" data-size="xs" checked>
+        <label class="form-check-label" for="customSwitch2">Parcels</label>
       </div>
-      <div class="custom-control custom-switch">
-        <input type="checkbox" id="customSwitch3" data-toggle="toggle" checked>
-        <label class="custom-control-label" for="customSwitch3">Buildings</label>
+      <div class="form-check pl-0">
+        <input type="checkbox" id="customSwitch3" data-toggle="toggle" class="form-check-input" data-size="xs"checked>
+        <label class="form-check-label" for="customSwitch3">Buildings</label>
       </div>
       </br>
       <!-- ui construction year date -->
