update name of previous "year" dive to "ui_group"

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </div>
 
   <!-- ui construction year date, and layer toggle -->
-  <div id='year' class="text-light">
+  <div id='ui_group' class="text-light">
     <!-- <label><img src="graphics/dashed-line.png" width="20px" height="20px"> UK Property</br>
         <p2>Even though the University of Kentucky (UK) was established in 1865, campus as it is known 
         today was not acquired until 1880 when Fayette County gave the former fairground property to the 
