modal grid attempt, no longer overlapping but still not overlapping

--- a/index.html
+++ b/index.html
@@ -64,16 +64,26 @@
       </div>-->
         <div class="modal-body">
           <div class="text-center">
+            <div class="row">
           <!-- id="slider-example"-->
-            <div id="image-compare"></div>
-          </div>
+          <div id=container-fluid> 
+          <div id="image-compare"></div>
+            </div>
+            </div>
+            <br>
+            <div class="row">
+              <div id=container-fluid>
+              <div id="caption"></div>
+              </div>
+            </div>
       </div>
     </div>
     <span class="close" data-dismiss="modal">&times;</span>
-    <div id="caption"></div>
+
+  </div>
   </div>
 
-  <!-- ui construction year date, and layer toggle -->
+    <!-- ui construction year date, and layer toggle -->
   <div id='ui_group' class="text-light">
     <!-- <label><img src="graphics/dashed-line.png" width="20px" height="20px"> UK Property</br>
         <p2>Even though the University of Kentucky (UK) was established in 1865, campus as it is known 
@@ -106,6 +116,7 @@
       <input type="range" min="1860" , max="2022" , value="2022" , step="1" class="year-slider"></input>
     </div>
     <h3>*Points of Interest are not filtered by the date slider</h3>
+  </div>
   </div>
 
 
