tooltip word-wrap

--- a/index.html
+++ b/index.html
@@ -93,12 +93,13 @@
               https://www.cdnpkg.com/bootstrap-switch-->
         <div class="form-check pl-0">
           <input type="checkbox" id="customSwitch1" data-toggle="toggle" class="form-check-input" data-size="xs" checked>
-          <label class="form-check-label" for="customSwitch1">Points of Interest*</label>
+          <label class="form-check-label" for="customSwitch1">Points of Interest*</p></label>
         </div>
         <div class="form-check pl-0">
           <input type="checkbox" id="customSwitch2" data-toggle="toggle" class="form-check-input" data-size="xs" checked>
           <label class="form-check-label" for="customSwitch2">Parcels</label>
         </div>
+        <div class="py-1"></div>
         <div class="form-check pl-0">
           <input type="checkbox" id="customSwitch3" data-toggle="toggle" class="form-check-input" data-size="xs"checked>
           <label class="form-check-label" for="customSwitch3">Buildings</label>
