--- a/index.html
+++ b/index.html
@@ -58,26 +58,20 @@
     <div id="myModal" class="modal">
       <div class="modal-content">
         <!--<div class="modal-header">
-          <h1 class="modal-title" id="modalLabel">Confirm</h1>
+        <h1 class="modal-title" id="modalLabel">Confirm</h1>
         </div>-->
         <div class="modal-body">
-          <div class="text-center">
-            <div class="row">
+          <div class="row">
             <!-- id="slider-example"-->
-            <div id=container-fluid> 
-              <div id="image-compare"></div>
-            </div>
-            </div>
-            <br>
-            <div class="row">
-              <div id=container-fluid>
-                <div id="caption"></div>
-              </div>
-            </div>
+            <div id="image-compare"></div>
+          </div>
+            <!-- id="slider-example"-->
+          <div class="row">
+            <div id="caption"></div>
           </div>
         </div>
-        <span class="close" data-dismiss="modal">&times;</span>
       </div>
+      <span class="close" data-dismiss="modal">&times;</span>
     </div>
 
     <!-- ui construction year date, and layer toggle -->
