update to 1880, not going to show buildings with time slider at this time

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark shadow-5-strong py-0">
-    <a class="navbar-brand" href="#">History of Campus Expansion
+    <a class="navbar-brand" href="#">Experience the History and Expansion of UK Campus
       <p class="font-weight-bold">University of Kentucky</p>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -106,7 +106,7 @@
         <div id="ui-controls" class="bg-light text-secondary font-weight-bold">
           <span class="min">1860</span>
           <span class="max">2022</span>
-          <input type="range" min="1860" , max="2022" , value="2022" , step="1" class="year-slider"></input>
+          <input type="range" min="1880" , max="2022" , value="2022" , step="1" class="year-slider"></input>
         </div>
       <h3>*Points of Interest are not filtered by the date slider</h3>
     </div>
