modal captions fixed

--- a/index.html
+++ b/index.html
@@ -61,14 +61,10 @@
         <h1 class="modal-title" id="modalLabel">Confirm</h1>
         </div>-->
         <div class="modal-body">
-          <div class="row">
             <!-- id="slider-example"-->
             <div id="image-compare"></div>
-          </div>
-            <!-- id="slider-example"-->
-          <div class="row">
+            <!-- id="caption"-->
             <div id="caption"></div>
-          </div>
         </div>
       </div>
       <span class="close" data-dismiss="modal">&times;</span>
